Salesforce/force-app/main/default/objects/PPI_Public_Sector_Entity__mdt/PPI_Public_Sector_Entity__mdt.object-meta.xml
<CustomObject>
    <label>PPI Public Sector Entity</label>
    <pluralLabel>PPI Public Sector Entities</pluralLabel>
</CustomObject>