Salesforce/force-app/main/default/objects/PPI_Public_Sector_Entity__mdt/fields/Name_Long__c.field-meta.xml
<CustomField>
    <fullName>Name_Long__c</fullName>
    <label>Name (Long)</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>