Salesforce/force-app/main/default/objects/PPI_Public_Sector_Entity__mdt/fields/Name_Short__c.field-meta.xml
<CustomField>
    <fullName>Name_Short__c</fullName>
    <label>Name (Short)</label>
    <type>TextArea</type>
</CustomField>