Salesforce/force-app/main/default/objects/PPI_Public_Sector_Entity__mdt/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <label>Valid From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>